--- a/css/shablon.css
+++ b/css/shablon.css
@@ -34,7 +34,7 @@ li {
 }
 
 body {
-    font-family:"Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     background-color: var(--white);
     font-size: 16px;
     line-height: 1.5;
@@ -48,17 +48,10 @@ img {
     height: auto;
 }
 
-.header-container {
+.container {
     max-width: 1158px;
     padding: 0 15px;
     margin: 0 auto;
-    display: flex;
-}
-
-.burger-menu {
-    display: none;
-    background-color: transparent;
-    stroke: black;
 }
 
 /* header section */
@@ -68,6 +61,10 @@ img {
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.header .container {
+    display: flex;
 }
 
 .header-nav {
@@ -82,6 +79,7 @@ img {
 
 .header-list {
     display: flex;
+    /*     padding: 24px 0; */
     gap: 40px;
 }
 
@@ -92,7 +90,7 @@ img {
     padding: 24px 0;
 }
 
-.header-list > li:first-child > a:after {
+.header-list>li:first-child>a:after {
     content: "";
     width: 100%;
     position: absolute;
@@ -103,7 +101,7 @@ img {
     background-color: #404bbf;
 }
 
-.header-list > li:first-child > a {
+.header-list>li:first-child>a {
     color: #404bbf;
 }
 
@@ -198,7 +196,7 @@ img {
     padding-top: 188px;
     padding-bottom: 188px;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-    url(../images/background_main.jpg);
+        url(../images/background_main.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
@@ -427,7 +425,9 @@ img {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-list-cell:hover .portfolio-image-text {transform: translateY(0);}
+.portfolio-list-cell:hover .portfolio-image-text {
+    transform: translateY(0);
+}
 
 .portfolio-container-text {
     padding: 32px 16px;
@@ -602,7 +602,7 @@ img {
     visibility: hidden;
     pointer-events: none;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal_background.is-open {
@@ -713,7 +713,7 @@ img {
     border-color: var(--iris);
 }
 
-.modal-input:focus ~ svg {
+.modal-input:focus~svg {
     fill: var(--iris);
 }
 
@@ -817,7 +817,7 @@ img {
     fill: transparent;
 }
 
-#user-privacy:checked + .modal-checkbox > .custom-checkbox {
+#user-privacy:checked+.modal-checkbox>.custom-checkbox {
     background-color: var(--ocean);
     fill: #F4F4FD;
     border: none;
@@ -826,25 +826,4 @@ img {
 #user-privacy:checked+.modal-checkbox>.custom-checkbox>.modal-vector {
     fill: #F4F4FD;
     border: none;
-}
-
-@media (min-width: 320px) and (max-width: 767px) {
-    .header-container {
-    width: 100%;
-    padding: 16px;
-    justify-content: space-between;
-    }
-
-    .header-list {
-        display: none;
-    }
-
-    .header-contacts {
-        display: none;
-    }
-
-    .burger-menu {
-        display: block;
-        margin: 0;
-    }
 }
