--- a/css/styles.css
+++ b/css/styles.css
@@ -847,4 +847,22 @@ img {
         display: block;
         margin: 0;
     }
+
+    .main {
+        padding-top: 72px;
+        padding-bottom: 72px;
+        max-width: 100%;
+        max-height: 432px;
+    }
+
+    .main-tag {
+        font-size: 36px;
+        line-height: 1.11111;
+        max-width: 216px;
+        max-height: 160px;
+    }
+
+    .main-button {
+        margin-top: 72px
+    }
 }
