--- a/css/recovery.css
+++ b/css/recovery.css
@@ -1,115 +1,10 @@
-.main {
-    margin: 0 auto;
-}
-
-.main-tag {
-    font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: var(--white);
-}
-
-.header-links {
-    text-decoration: none;
-    font-weight: 500;
-    color: var(--navy-blue);
-}
-
-.header-links:hover,
-.header-links:focus {
-    color: var(--ocean)
-}
-
-.header-contacts {
-    font-style: normal;
-}
-
-.head-contact {
-    text-decoration: none;
-    color: var(--slate);
-}
-
-.head-contact:hover,
-.head-contact:focus {
-    color: var(--ocean)
-}
-
-/* main section */
-
-.main {
-    background-color: var(--navy-blue);
-    display: block;
-    padding-top: 188px;
-    padding-bottom: 188px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-        url(../images/background_main.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50% 50%;
-    max-width: 1440px;
-}
-
-.main-tag {
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    max-width: 496px;
-    max-height: 120px;
-}
-
-.main-button {
-    display: block;
-    margin: 0 auto;
-    justify-content: center;
-    font-family: inherit;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: var(--white);
-    background-color: var(--iris);
-    cursor: pointer;
-    margin-top: 48px;
-    padding: 16px 32px;
-    min-width: 169px;
-    height: 56px;
-    border: none;
-    border-radius: 4px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.main-button:hover,
-.main-button:focus {
-    background-color: var(--ocean);
-}
-
-.second-tag {
-    text-align: center;
-}
-
-/* advantages section */
-
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-}
-
 .advantages {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding: 120px 156px;
 }
 
 .advantages-list {
     display: flex;
+    flex-direction: row;
     gap: 24px;
     justify-content: center;
 }
@@ -134,6 +29,15 @@
     width: calc((100% - 72px) / 4);
 }
 
+.advantages-list .third-tag {
+    font-weight: 500;
+    font-size: 20px;
+}
+
+.advantages-text {
+    font-weight: 400;
+}
+
 .advantages-list li h3 {
     margin-bottom: 8px;
 }
@@ -141,7 +45,7 @@
 /* profiles section */
 
 .profiles {
-    background-color: var(--cloud);
+    background-color: var--cloud);
     padding: 120px 0;
 }
 
