--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ img {
 
 .burger-menu {
     display: block;
-    margin: 0;
+    margin-right: 16px;
     background-color: transparent;
     stroke: black;
 }
@@ -200,7 +200,7 @@ img {
 }
 
 .advantages-list li {
-    max-width: 288px;
+    width: 288px;
 }
 
 .adv-container {
@@ -772,10 +772,219 @@ img {
     border: none;
 }
 
+@media (min-width: 768px) {
+    body {
+        max-width: 100%;
+        margin: 0 auto;
+    }
+
+    .header-container {
+        max-height: 72px;
+        padding: 24px 16px;
+        align-items: center;
+    }
+
+    .burger-menu {
+        display: none;
+    }
+
+    .header-nav {
+        display: flex;
+        align-items: center;
+    }
+
+    .header-nav .logo {
+        margin-right: 120px;
+    }
+
+    .header-list {
+        display: flex;
+        gap: 40px;
+    }
+
+    .header-contacts {
+        display: block;
+    }
+
+    .header-links {
+        font-weight: 500;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        display: block;
+        position: relative;
+        padding: 24px 0;
+    }
+
+    .header-list>li:first-child>a:after {
+        content: "";
+        width: 100%;
+        position: absolute;
+        left: 0;
+        bottom: -1px;
+        height: 4px;
+        border-radius: 2px;
+        background-color: #404bbf;
+    }
+
+    .header-list>li:first-child>a {
+        color: #404bbf;
+    }
+
+    .contacts-list {
+        margin-right: 0;
+    }
+
+    .head-contact {
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .header-links {
+        text-decoration: none;
+        font-weight: 500;
+        color: var(--navy-blue);
+    }
+
+    .header-links:hover,
+    .header-links:focus {
+        color: var(--ocean)
+    }
+
+    .header-contacts {
+        font-style: normal;
+    }
+
+    .head-contact {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: var(--slate);
+        text-decoration: none;
+        color: var(--slate);
+    }
+
+    .head-contact:hover,
+    .head-contact:focus {
+        color: var(--ocean)
+    }
+
+    .main-tag {
+        font-size: 56px;
+        line-height: 1.07;
+    }
+
+    .main {
+        padding-top: 112px;
+        padding-bottom: 112px;
+        max-width: 100%;
+    }
+
+    .main-tag {
+        max-width: 496px;
+        max-height: 120px;
+    }
+
+    .main-button {
+        margin-top: 36px;
+        padding: 16px 32px;
+        min-width: 169px;
+    }
+
+    .advantages {
+        padding: 96px 16px;
+    }
+
+    .advantages-list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 24px;
+        row-gap: 72px;
+    }
+
+    .advantages-list li {
+        width: calc((100% - 24px) / 2);
+    }
+
+    .advantages-list .third-tag {
+        text-align: start;
+    }
+
+    .profiles {
+        padding: 96px 108px;
+    }
+
+    .profiles-list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 24px;
+        row-gap: 64px;
+    }
+
+    .portfolio {
+        padding: 96px 16px;
+    }
+
+    .portfolio-list {
+        flex-direction: row;
+        gap: 24px;
+        row-gap: 72px;
+    }
+
+    .portfolio-container {
+        height: auto;
+    }
+
+    .portfolio-list-cell {
+        width: calc((100% - 24px) / 2);
+    }
+
+    .footer {
+        padding: 96px 108px;
+    }
+
+    .footer .container {
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: baseline;
+        margin: 0 auto;
+        gap: 24px;
+        row-gap: 72px;
+    }
+
+    .footer .logo {
+        display: inline-block;
+        max-height: 112px;
+        text-align: start;
+    }
+
+    .footer-logo-text {
+        max-width: 264px;
+    }
+
+    .footer-social-cont {
+        margin-left: auto;
+    }
+
+    .footer-social-text {
+        text-align: start;
+    }
+
+    .footer-subscribe-buttons {
+        display: flex;
+        gap: 24px;
+    }
+
+    .footer-subscribe-input {
+        display: inline-block;
+        width: 264px;
+    }
+}
+
+/* dekstop */
+
 @media (min-width: 1158px) {
     body {
         max-width: 100%;
-        /* padding: 0 15px; */
         margin: 0 auto;
     }
 
