--- a/css/styles.css
+++ b/css/styles.css
@@ -983,15 +983,12 @@ img {
 /* dekstop */
 
 @media (min-width: 1158px) {
-    body {
-        max-width: 100%;
-        margin: 0 auto;
-    }
 
     .header-container {
         max-height: 72px;
-        padding: 24px 156px;
+        padding: 24px 0;
         align-items: center;
+        width: 1158px;
     }
 
     .burger-menu {
@@ -1022,7 +1019,6 @@ img {
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         display: block;
         position: relative;
-        padding: 24px 0;
     }
     
     .header-list>li:first-child>a:after {
@@ -1106,12 +1102,14 @@ img {
     }
 
     .advantages {
-        padding: 120px 156px;
+        padding: 120px 0;
+        max-width: 1158px;
+        margin: 0 auto;
     }
     
     .advantages-list {
-        display: flex;
         flex-direction: row;
+        flex-wrap: nowrap;
         gap: 24px;
         justify-content: center;
     }
@@ -1151,7 +1149,12 @@ img {
     }
 
     .profiles {
-        padding: 120px 156px;
+        padding: 120px 0;
+    }
+
+    .profiles .container {
+        max-width: 1158px;
+        margin: 0 auto;
     }
 
     .profiles .second-tag {
@@ -1172,7 +1175,7 @@ img {
     }
 
     .portfolio {
-        padding: 120px 156px;
+        padding: 120px 0;
     }
 
     .portfolio-list {
@@ -1181,7 +1184,9 @@ img {
         row-gap: 48px;
     }
 
-    .portfolio-container {
+    .portfolio .container {
+        max-width: 1158px;
+        margin: 0 auto;
         height: auto;
     }
 
@@ -1190,10 +1195,11 @@ img {
     }
 
     .footer {
-        padding: 100px 156px;
+        padding: 100px 0;
     }
 
     .footer .container {
+        max-width: 1158px;
         flex-direction: row;
         align-items: baseline;
         margin: 0 auto;
