--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,6 @@ img {
 
 .burger-menu {
     display: block;
-    margin-right: 16px;
     background-color: transparent;
     stroke: black;
 }
@@ -140,7 +139,7 @@ img {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
-    max-width: 320px;
+    max-width: 100%;
     max-height: 432px;
 }
 
@@ -944,6 +943,7 @@ img {
 
     .footer .container {
         flex-direction: row;
+        justify-content: flex-start;
         flex-wrap: wrap;
         align-items: baseline;
         margin: 0 auto;
@@ -952,17 +952,11 @@ img {
     }
 
     .footer .logo {
-        display: inline-block;
-        max-height: 112px;
         text-align: start;
     }
 
     .footer-logo-text {
         max-width: 264px;
-    }
-
-    .footer-social-cont {
-        margin-left: auto;
     }
 
     .footer-social-text {
