--- a/css/styles.css
+++ b/css/styles.css
@@ -555,14 +555,14 @@ img {
 }
 
 .modal-window {
-    padding: 72px 24px 24px 24px;
+    padding: 72px 16px 24px 16px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: var(--dairy);
-    width: 408px;
-    min-height: 584px;
+    width: 288px;
+    min-height: 600px;
     border-radius: 4px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -697,12 +697,13 @@ img {
 }
 
 .modal-checkbox {
+    display: flex;
+    align-items: center;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
-    text-align: center;
 }
 
 .modal_button_send {
@@ -749,6 +750,7 @@ img {
     position: relative;
     margin-right: 8px;
     display: inline-flex;
+    flex-shrink: 0;
     justify-content: center;
     align-items: center;
     background-color: var(--white);
@@ -971,6 +973,16 @@ img {
     .footer-subscribe-input {
         display: inline-block;
         width: 264px;
+    }
+
+    .modal-window {
+        width: 408px;
+        min-height: 584px;
+        padding: 72px 24px 24px 24px;
+    }
+
+    .modal-checkbox {
+        display: block;
     }
 }
 
@@ -1231,4 +1243,18 @@ img {
         display: inline-block;
         width: 264px;
     }
+
+    /* .modal-window {
+        padding: 72px 24px 24px 24px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: var(--dairy);
+        width: 408px;
+        min-height: 584px;
+        border-radius: 4px;
+        box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    } */
 }
