--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,10 @@ img {
     padding-top: 72px;
     padding-bottom: 72px;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-    url(../images/background_main.jpg);
+    image-set(
+    url(../images/background_main.jpg) 1x,
+    url(../images/background_main@2x.jpg) 2x
+    );
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
