--- a/css/styles.css
+++ b/css/styles.css
@@ -775,7 +775,7 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(46, 47, 66, 0.4);
+    background-color: #fff;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
@@ -790,14 +790,16 @@ img {
 }
 
 .modal-menu-mobile {
-    padding: 72px 24px 40px 16px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding-top: 72px;
+    padding-bottom: 40px;
+    position: relative;
+    top: 0;
+    left: 0;
     background-color: var(--dairy);
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    min-height: 100%;
+    height: 100%;
     border-radius: 4px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -808,7 +810,6 @@ img {
 }
 
 .modal-mobile-close {
-    padding: 0;
     border-radius: 50%;
     width: 24px;
     height: 24px;
@@ -824,14 +825,6 @@ img {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mobile-menu-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    max-width: 280px;
-    margin: 0 auto;
-}
-
 .mobile-menu-link {
     width: 100%;
     height: 100%;
@@ -843,7 +836,7 @@ img {
 }
 
 .mobile-menu-nav {
-    margin-bottom: 168px;
+    margin-bottom: auto;
 }
 
 .mobile-menu-list-main {
@@ -901,6 +894,7 @@ img {
     max-width: 280px;
     display: flex;
     gap: 40px;
+    margin-bottom: 0;
 }
 
 .mobile-menu-link {
@@ -923,6 +917,10 @@ img {
 @media (min-width: 768px) {
     .container {
         max-width: 768px;
+    }
+
+    .modal_menu {
+        display: none;
     }
 
     .header-container {
@@ -1133,6 +1131,10 @@ img {
     .container {
         max-width: 1158px;
         padding: 0 15px;
+    }
+
+    .modal_menu {
+        display: none;
     }
 
     .burger-menu {
