--- a/css/styles.css
+++ b/css/styles.css
@@ -139,15 +139,33 @@ img {
     padding-top: 72px;
     padding-bottom: 72px;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-    image-set(
-    url(../images/background_main.jpg) 1x,
-    url(../images/background_main@2x.jpg) 2x
-    );
+    url(../images/main-mob.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
-    max-width: 100%;
+    max-width: 320px;
     max-height: 432px;
+}
+
+@media screen and (min-resolution: 192dpi) and (min-width: 1158px) {
+    .main {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/main-desk@2x.jpg);
+    }
+}
+
+@media screen and (min-resolution: 192dpi) and (min-width: 768px) {
+    .main {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/main-tab@2x.jpg);
+    }
+}
+
+@media screen and (min-resolution: 192dpi) and (max-width: 767px) {
+    .main {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/main-mob@2x.jpg);
+    }
 }
 
 .main-tag {
@@ -228,8 +246,9 @@ img {
 
 .profiles {
     background-color: var(--cloud);
-    max-width: 100%;
+    max-width: 320px;
     padding: 96px 28px;
+    margin: 0 auto;
 }
 
 .profiles .second-tag {
@@ -375,8 +394,9 @@ img {
 
 .footer {
     background-color: var(--navy-blue);
-    width: 100%;
+    width: 320px;
     padding: 96px 16px;
+    margin: 0 auto;
 }
 
 .footer .container {
@@ -1014,7 +1034,9 @@ img {
     .main {
         padding-top: 112px;
         padding-bottom: 112px;
-        max-width: 100%;
+        max-width: 768px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+        url(../images/main_tab.jpg);
     }
 
     .main-tag {
@@ -1050,6 +1072,11 @@ img {
 
     .profiles {
         padding: 96px 108px;
+        max-width: 768px;
+    }
+
+    .profiles .container {
+        padding: 0;
     }
 
     .profiles-list {
@@ -1079,6 +1106,7 @@ img {
 
     .footer {
         padding: 96px 108px;
+        width: 768px;
     }
 
     .footer .container {
@@ -1221,15 +1249,17 @@ img {
     }
 
     .main-tag {
-    font-size: 56px;
-    line-height: 1.07;
+        font-size: 56px;
+        line-height: 1.07;
     }
 
     .main {
         padding-top: 188px;
         padding-bottom: 188px;
-        max-width: 100%;
+        max-width: 1158px;
         max-height: none;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+        url(../images/main_desk.jpg);
     }
     
     .main-tag {
@@ -1292,6 +1322,7 @@ img {
 
     .profiles {
         padding: 120px 0;
+        max-width: 1158px;
     }
 
     .profiles-img {
@@ -1342,13 +1373,12 @@ img {
 
     .footer {
         padding: 100px 0;
+        width: 1158px;
     }
 
     .footer .container {
-        max-width: 1158px;
         flex-direction: row;
         align-items: baseline;
-        margin: 0 auto;
     }
 
     .footer .logo {
